...

/** Test tags for the create meeting screen. */
object CreateMeetingScreenTestTags {
  const val CREATE_MEETING_SCREEN_TITLE = "CreateMeetingScreenTitle"
  const val CREATE_MEETING_SCREEN_DESCRIPTION = "CreateMeetingScreenDescription"
  const val ERROR_MSG = "ErrorMsg"
  const val INPUT_MEETING_TITLE = "InputMeetingTitle"
  const val INPUT_MEETING_DATE = "InputMeetingDate"
  const val INPUT_MEETING_TIME = "InputMeetingTime"
  const val INPUT_MEETING_DURATION = "InputMeetingDuration"
  const val INPUT_FORMAT = "InputFormat"
  const val INPUT_MEETING_LINK = "InputMeetingLink"
  const val MEETING_LINK_WARNING = "MeetingLinkWarning"
  const val PLATFORM_ICON = "PlatformIcon"
  const val CREATE_MEETING_BUTTON = "CreateMeetingButton"
  const val INPUT_MEETING_LOCATION = "InputMeetingLocation"
  const val LOCATION_SUGGESTION = "LocationSuggestion"
  const val PICK_LOCATION = "PickLocation"
  const val BACK_BUTTON = "BackButton"
}

...
          onPickLocationOnMap = onPickLocationOnMap,
          onSave = { createMeetingViewModel.createMeeting() })

  Scaffold(
      topBar = {
        EurekaTopBar(
            title = "Create Meeting",
            navigationIcon = {
              BackButton(
                  onClick = onBackClick,
                  modifier = Modifier.testTag(CreateMeetingScreenTestTags.BACK_BUTTON))
            })
      },
...
                datePickerState.selectedDateMillis?.let { millis ->
                  val newDate =
                      Instant.ofEpochMilli(millis).atZone(ZoneId.systemDefault()).toLocalDate()
                  onDateSelected(newDate)
                }
              }) {
                Text("OK")
              }
        },
        dismissButton = { TextButton(onClick = { showDialog = false }) { Text("Cancel") } }) {
          DatePicker(
              state = datePickerState, modifier = Modifier.verticalScroll(rememberScrollState()))
        }
...
